--- a/platforms/ios/WeexDemo/WeexDemo-Info.plist
+++ b/platforms/ios/WeexDemo/WeexDemo-Info.plist
@@ -66,5 +66,17 @@
   <string>bundlejs/index.js</string>
   <key>WXSocketConnectionURL</key>
   <string>ws://10.134.182.130:8080</string>
+  <key>WXEntryBundleURL</key>
+  <string>bundlejs/index.js</string>
+  <key>WXSocketConnectionURL</key>
+  <string>ws://10.134.190.11:8080</string>
+  <key>WXEntryBundleURL</key>
+  <string>bundlejs/index.js</string>
+  <key>WXSocketConnectionURL</key>
+  <string>ws://10.134.190.11:8080</string>
+  <key>WXEntryBundleURL</key>
+  <string>bundlejs/index.js</string>
+  <key>WXSocketConnectionURL</key>
+  <string>ws://10.134.190.11:8080</string>
 </dict>
 </plist>
