--- a/android.config.json
+++ b/android.config.json
@@ -1,5 +1,5 @@
 {
-  "AppName":"WeexApp",
+  "AppName":"App",
   "AppId":"com.alibaba.weex",
   "SplashText":"Hello\nWeex",
   "WeexBundle":"index.js"
